Fixed Missing Background colour from new colour palette

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,17 +7,17 @@
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap'); // font-family: 'Space Mono', monospace;
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"); // font-family: 'Space Mono', monospace;
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
 
-body{
+body {
   padding-bottom: 48px;
-  background-color: rgb(1, 21, 21);
+  background-color: #f2e9e4;
 }
 
-h1{
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
